@@ -4026,13 +4026,15 @@ name|file
 expr_stmt|;
 name|in
 operator|=
-name|fs
-operator|.
-name|open
+name|openFile
 argument_list|(
+name|fs
+argument_list|,
 name|file
 argument_list|,
 name|bufferSize
+argument_list|,
+name|length
 argument_list|)
 expr_stmt|;
 name|this
@@ -4047,6 +4049,13 @@ name|start
 operator|+
 name|length
 expr_stmt|;
+name|boolean
+name|succeed
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
 if|if
 condition|(
 name|start
@@ -4073,6 +4082,68 @@ block|{
 name|init
 argument_list|()
 expr_stmt|;
+block|}
+name|succeed
+operator|=
+literal|true
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+operator|!
+name|succeed
+condition|)
+block|{
+if|if
+condition|(
+name|in
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|in
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+name|LOG
+operator|!=
+literal|null
+operator|&&
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Exception in closing "
+operator|+
+name|in
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+block|}
 block|}
 name|columnNumber
 operator|=
@@ -4403,6 +4474,37 @@ argument_list|,
 name|codec
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**      * Override this method to specialize the type of      * {@link FSDataInputStream} returned.      */
+specifier|protected
+name|FSDataInputStream
+name|openFile
+parameter_list|(
+name|FileSystem
+name|fs
+parameter_list|,
+name|Path
+name|file
+parameter_list|,
+name|int
+name|bufferSize
+parameter_list|,
+name|long
+name|length
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|fs
+operator|.
+name|open
+argument_list|(
+name|file
+argument_list|,
+name|bufferSize
+argument_list|)
+return|;
 block|}
 specifier|private
 name|void
