@@ -35,6 +35,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|InputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|UnsupportedEncodingException
 import|;
 end_import
@@ -121,7 +131,35 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|FSDataInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|FileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|LocalFileSystem
 import|;
 end_import
 
@@ -3481,6 +3519,242 @@ argument_list|,
 name|readCount
 argument_list|,
 name|writeCount
+argument_list|)
+expr_stmt|;
+block|}
+comment|// adopted Hadoop-5476 (calling new SequenceFile.Reader(...) leaves an
+comment|// InputStream open, if the given sequence file is broken) to RCFile
+specifier|private
+specifier|static
+class|class
+name|TestFSDataInputStream
+extends|extends
+name|FSDataInputStream
+block|{
+specifier|private
+name|boolean
+name|closed
+init|=
+literal|false
+decl_stmt|;
+specifier|private
+name|TestFSDataInputStream
+parameter_list|(
+name|InputStream
+name|in
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|super
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|closed
+operator|=
+literal|true
+expr_stmt|;
+name|super
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+specifier|public
+name|boolean
+name|isClosed
+parameter_list|()
+block|{
+return|return
+name|closed
+return|;
+block|}
+block|}
+specifier|public
+name|void
+name|testCloseForErroneousRCFile
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|LocalFileSystem
+name|fs
+init|=
+name|FileSystem
+operator|.
+name|getLocal
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+comment|// create an empty file (which is not a valid rcfile)
+name|Path
+name|path
+init|=
+operator|new
+name|Path
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"test.build.data"
+argument_list|,
+literal|"."
+argument_list|)
+operator|+
+literal|"/broken.rcfile"
+argument_list|)
+decl_stmt|;
+name|fs
+operator|.
+name|create
+argument_list|(
+name|path
+argument_list|)
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// try to create RCFile.Reader
+specifier|final
+name|TestFSDataInputStream
+index|[]
+name|openedFile
+init|=
+operator|new
+name|TestFSDataInputStream
+index|[
+literal|1
+index|]
+decl_stmt|;
+try|try
+block|{
+operator|new
+name|RCFile
+operator|.
+name|Reader
+argument_list|(
+name|fs
+argument_list|,
+name|path
+argument_list|,
+name|conf
+argument_list|)
+block|{
+comment|// this method is called by the RCFile.Reader constructor, overwritten,
+comment|// so we can access the opened file
+specifier|protected
+name|FSDataInputStream
+name|openFile
+parameter_list|(
+name|FileSystem
+name|fs
+parameter_list|,
+name|Path
+name|file
+parameter_list|,
+name|int
+name|bufferSize
+parameter_list|,
+name|long
+name|length
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|InputStream
+name|in
+init|=
+name|super
+operator|.
+name|openFile
+argument_list|(
+name|fs
+argument_list|,
+name|file
+argument_list|,
+name|bufferSize
+argument_list|,
+name|length
+argument_list|)
+decl_stmt|;
+name|openedFile
+index|[
+literal|0
+index|]
+operator|=
+operator|new
+name|TestFSDataInputStream
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+return|return
+name|openedFile
+index|[
+literal|0
+index|]
+return|;
+block|}
+block|}
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"IOException expected."
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|expected
+parameter_list|)
+block|{     }
+name|assertNotNull
+argument_list|(
+name|path
+operator|+
+literal|" should have been opened."
+argument_list|,
+name|openedFile
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"InputStream for "
+operator|+
+name|path
+operator|+
+literal|" should have been closed."
+argument_list|,
+name|openedFile
+index|[
+literal|0
+index|]
+operator|.
+name|isClosed
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
